--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">  
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
 </body>
 </html>
